@@ -39,7 +39,7 @@ class FSpotPhotoList(PhotoList):
 
     def get_photo(self, cb):
         rate = self.rate_list.get_random_weight()
-        columns = 'base_uri, filename, P.id, default_version_id, time' \
+        columns = 'base_uri, filename, P.id, default_version_id, time, roll_id' \
             if self.db.is_new else 'uri'
         sql = self.sql.get_statement(columns, rate.name)
         sql += ' ORDER BY random() LIMIT 1;'
@@ -47,7 +47,7 @@ class FSpotPhotoList(PhotoList):
         if self.db.is_new:
             photo = self.db.fetchall(sql)
             if not photo: return False
-            base_url, filename, id, version, epoch = photo[0]
+            base_url, filename, id, version, epoch, roll_id = photo[0]
 
             if version != 1:
                 sql = ("SELECT filename FROM photo_versions WHERE photo_id=%s "
@@ -63,12 +63,17 @@ class FSpotPhotoList(PhotoList):
             url = ''.join(self.db.fetchall(sql)[0])
             filename = url[ url.rfind('/') + 1: ]
 
+        # photo time zone was changed in v.0.6.2
+        old_roll_id = self.conf.get_int('plugins/fspot/old_roll_id', 0)
+        if old_roll_id and roll_id < old_roll_id:
+            epoch -= time.timezone * 2
+
         data = { 'url' : url,
                  'rate' : rate.name,
                  'filename' : url.replace('file://', ''),
                  'title' : filename, # without path
                  'id' : id,
-                 'date_taken' : epoch - time.timezone * 2,
+                 'date_taken' : epoch,
                  'fav' : FSpotFav(rate.name, id, self.rate_list),
                  'icon' : FSpotIcon }
 
