@@ -1,3 +1,8 @@
+2010-07-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* fspot/__init__.py (FSpotPhotoList.get_photo): Added a gcon key
+	  'fspot/old_roll_id' to correct old photo time stamps.
+
 2010-06-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* actors.py (ActorSourceIcon._get_ui_data): Changed the
